@@ -1,6 +1,3 @@
-//> using javacOpt --enable-preview --source 17
-// test: -jvm 17
-
 package i18533;
 
 public final class Cat extends Pet {
